favoritestyles.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

#jobData div{
  border: 1px solid #ddd;
  border-radius: 40px;
  padding: 20px 40px;
  margin: 40px 0; 
  box-shadow:
  0 3px 10px rgb(0 0 0 / 0.2);
}

body{
  display: grid;
  height: 100vh;
  background-color: #F3F4F6;
  font-family: 'Exo', sans-serif;
  font-weight:900;
}

.main{
  display: flex;
  width: 100%;
  flex-direction: row;
  padding: 10%;
  padding-top:5%;
  padding-bottom:5%;

}

.bball{
 padding-left: 5%;
 height: 155px;
 width: 450px;
}
/* Home Page */


.fontAwesome {
  font-family: 'Helvetica', FontAwesome, sans-serif;
}

.abouttitle {
  color: purple;
  margin-left: 5%;
  grid-column: 1/2;
}

.homeheading {
  font-size: 38px;
  font-weight: 100px;
}

.pinkHeading {
  font-size: 38px;
  color: #FF4B88;
}

.findjobs {
  font-size: 15px;
}

.headerimg { 
  max-width: 100%; 
  height: auto; 
}

img { 
  max-width: 100%; 
  height: auto; 
}

header {
  padding: 1em;
}

.finder{
  display: inline-block;
  font-size: 22px;
  margin-top: 10px;
  margin-left: 20px;
}

.navbar{
  font-size: 18px;
  border: 1px solid rgba(0, 0, 0, 0);
  color: #070707;
  text-decoration: none; 
  padding-bottom: 10px;
  padding-top: 20px;  
  padding-left: 20px;
  padding-right: 40px;
}

.navbarAbout {
  grid-column: 1/4;
}

.main-nav {
  list-style-type: none;
}

.right-nav {
  list-style-type: none;
  display: none;
  margin-left: auto;
}

.nav-links {
  --fa-border-color: red;
  --fa-primary-color: #FF4B88;
    text-decoration: none;
    color: black;
}

.main-nav li {
  text-align: center;
  margin: 15px auto;
}

.right-nxfav li {
  text-align: center;
  margin: 15px auto;
}


section.middle {
  border-radius: 50px;
  border: 0;
  border-color: #070707;
  background-color: #FFFFFF;
  padding: 20px;
  margin: auto;
  word-spacing: 40px;
  box-shadow:   
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12);
}

div.bottom{
    grid-column: 1/3;
    
}

.placeholderIcon {
  opacity:0.3;
}


li {
  display: inline;
  color: #070707;
  text-decoration: none;
   
}

input {
  border:0;
  outline:0;
  font-size: 18px;
  justify-content: flex-start;
}

input:focus {
  outline:none!important;
}

select {
  cursor: pointer;
  font-size: 18px;
  border:0;
  outline:0;
  background-color: #FFFFFF;
}


button {
  cursor: pointer;
  border-radius: 40px;
  border: 0px;
  padding: 10px;
  padding-right: 50px;
  padding-left: 50px;
  background-color: #713FDC;
  color: #F3F4F6;
  font-size: 18px;
}

footer{
  display: flex;
  flex-direction: row;
  width: 100%;
  grid-row: 5/5;
  margin-top: 3%;
  margin-left: 5%;

}


.switch {
  position: relative;
  display: inline-block;
  width: 150px;
  height: 34px;
}

.switch input {display:none;}

.slider {
  position: absolute;  
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #7a7878;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: attr(data-content) " ";  
  height: 31px;
  width: 75px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #7140dc;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(95px);
  -ms-transform: translateX(70px);
  transform: translateX(70px);
}

.toggle-off
{  
  top: 50%;
  left: 15%;
  margin-left: 10px;}

  .toggle-on
{
  top: 50%;
  left: 50%;
  margin-left: 20px; }

.toggle-on, .toggle-off
{
  color: black;
  position: absolute;
  transform: translate(-50%,-50%);  
  font-size: 10px;
  font-family: inherit;
}

.active:checked+ .slider .toggle-on{


color: #7140dc !important; }


.inactive + .slider .toggle-off {  
  color: #7a7878 !important;
}


.slider.round 
{  border-radius: 5px;
 }

.slider.round:before 
{  border-radius: 5px;  }

.bottom-grid{
  padding: 5%;
  display: flex;
  width: 100%;
}

.bglink{
  display: flex;

 justify-content: space-around;
  border-radius: 10px;
  margin: 2%;
  height: 160px;
  width: 180px;
  background-color: #ffffff;
  
}

.bglink:hover{
  background-color: #713FDC;

}


.arrow{
  height: 30px;
  width: 30px;
  float:right;
  grid-column: 2/3;
  grid-row:1/2;
}

.one{
  margin-right:20px;

}
.two{
  margin-right:20px;

}
.three{
  margin-right:20px;

}
.four{
    margin-right:20px;

}

.bglink:hover .one{
 color: white;
}
.bglink:hover .two{
  color: white;

}
.bglink:hover .three{
  color: white;

}
.bglink:hover .four{
  color: white;

}

footer{
  display: flex;
  flex-direction: row;
  width: 100%;
}

.bottom-grid{
  position: relative;
  padding: 2%;
  width: 100%;
}

.bglink{
  border-radius: 10px;
  margin: 2%;
  height: 120px;
  width: 260px;
  background-color: #ffffff;
  
}

.bglink:hover{
  background-color: #713FDC;

}

.bottom-grid img {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 30px;
  height: 30px;
}

.bglink a {
  text-decoration: none;
  color: black;
  size: .8em;
}

.bglink:hover a {
  color: white;
}

.bglink:hover img {
  filter: invert(1);
}


/* About Page CSS */

.profile {
  display: flex;
  flex-direction: column;
  background-color: white;
  border-radius: 40px;
  padding: 15px;
  width: 30vh;
  height: 55vh;
  text-align: center;
  margin: 1vh;
  margin-bottom: 10vh;
}

.profileimage {
  border-radius: 30px;
  border: 5px;
  height: auto;
}

.contacticons {
  margin: 5px;
}

.container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  grid-row:3/4;
  margin-left: 5%;
  margin-right: 5%;
}

/* Favorite Jobs */

.grid-container {
    display: grid;
    padding: 10px;
    background-color: #F3F4F6;
    justify-content: center;
    align-items: baseline;
  }

.topcontainer {
    display: flex;
    padding: 5px;
    background-color: #F3F4F6;
    font-family: 'Exo', sans-serif;
    font-weight:900;
    font-size: 70px;
  }

.header2 {
    color: #FF4B88;
  }

.logo {
    max-width: 100%;
    height: 150px;
    border: 10px;
    padding-left: 50px;
}

.results {
  background-color: #F3F4F6;
    padding: 5px;
  }

.button {
  background-color: white;
  border: 1px;
  border-radius: 15px;
  margin: 10px;
  padding: 10px;
  color: #A6A6A6;
}

.button:hover {
    border-radius: 15px;
    border: none;
    background-color: #713FDC;
    color: white;
}

/* Back to Top button that appears when data is available */
#myBtn {
  display: none; 
  position: fixed; 
  bottom: 20px;
  right: 30px; 
  z-index: 99; 
  border: none; 
  outline: none; 
  background-color: #FF4B88; 
  color: white; 
  cursor: pointer; 
  padding: 15px; 
  border-radius: 15px; 
  font-size: 18px; 
}

#myBtn:hover {
  background-color: #713FDC; 
}




.main-nav {
  list-style-type: none;
}

.right-nav {
  list-style-type: none;
  display: none;
  margin-left: auto;
}

.nav-links {
    text-decoration: none;
    color: black;
}

.main-nav li {
  text-align: center;
  margin: 15px auto;
}

.right-nav li {
  text-align: center;
  margin: 15px auto;
}

header {
  padding: 1em;
}

.finder{
  display: inline-block;
  font-size: 22px;
  margin-top: 10px;
  margin-left: 20px;
  margin-bottom: 50px;
}

/* Media Queries */

@media screen and (min-width: 768px) {
  .navbar {
    display: flex;
    justify-content: space-around;
    padding-bottom: 0;
    height: 70px;
   
  }

  #chkToggle:checked + ul.main-nav {
    display: flex;
  }

  .main-nav {
    display: flex;
    margin-right: 30px;
    flex-direction: row;
    margin-right: 30px;
  }
  
  .main-nav li {
    margin: 0;
  }

  .right-nav {
    display: flex;
    flex-direction: row;
    margin-left: auto;
  }
  
  .right-nav li {
    text-align: center;
    margin: 15px auto;
  }


  .nav-links {
    margin-left: 20px;
  }

}

@media screen and (max-width: 1000px){
  .container{
      display: flex;
      flex-wrap: wrap;
  }


 
    .profile{
      height: 500px;
      width: fit-content;
    
      }
    .profileimage{
      height: 80%;
    }

      }



      @media screen and (max-height: 600px){
        .profile{
          height: 600px;
          width: fit-content;
        
          }

        .profileimage{
      height: 80%;
    }

      }
@media screen and (max-width: 768px){
  .main-nav{
    margin-top: 15px;
  }
  .nav-links{
    margin: 5px;
  }

}

